# zosSp

./: CMakeLists.txt  main.c
commands/: copyFile.c  copyFile.h  dirCommands.c  dirCommands.h  fileCommands.c  fileCommands.h  fsCommands.c  fsCommands.h  moveFile.c  moveFile.h  pathCommands.c  pathCommands.h  removeFile.c
commands/dir/: ls.c  ls.h  makeDir.c  makeDir.h  removeDir.c  removeDir.h
commands/files/: copyFile.c  fileContent.c  fileContent.h  moveFile.c  removeFile.c  removeFile.h
doc/: document.aux  document.tex  document.toc
fat/: fat.c  fat.h
input/: checkInput.c  checkInput.h  inputHandler.c  inputHandler.h
output/: error.h
utils/: error.h  messages.c  messages.h
